[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "colloids"
readme = "README.md"
requires-python = ">=3.10"
version = "0.0.1"
dependencies = [
    "jupyterlab >= 4.1",
    "matplotlib >= 3.8",
    "numpy >= 1.26, < 2.0",
    "openmm >= 8.0",
    "pytest >= 7.4",
    "gsd >= 3.2",
    "pyyaml >= 6.0",
    "tqdm >= 4.65",
    "pandas >= 2.2",
    "ase >= 3.22",
    "scipy >= 1.12"
]

[project.scripts]
colloids-run = "colloids.colloids_run:main"
colloids-resume = "colloids.colloids_resume:main"
colloids-create = "colloids.colloids_create.colloids_create:main"
colloids-analyze = "colloids.colloids_analyze.colloids_analyze:main"
colloids-tune = "colloids.colloids_tune.colloids_tune:main"

[tool.setuptools.packages.find]
exclude = ["Literature", "jupyter-scripts"]
